--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -7,7 +7,7 @@
 }
 
 .card__title_small {
-    font-family: 'Kaspersky Bold';
+    font-family: 'Kaspersky Sans';
     font-size: 18px;
     line-height: 21px;
     color: #1D1D1B;
