--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,7 @@
 
 .page {
   margin: 0 auto;
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: 'Kaspersky Sans', sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
