--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,8 +6,9 @@
 @import url(__button/header__button.css);
 
 .header{
-    width: 100%;
+    width: 1920px;
     display: flex;
+
     justify-content: space-between;
     border-bottom: 1px #F2F2F2;
     box-shadow: 0px 1px 4px rgba(102, 102, 102, 0.12);
