--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -211,13 +211,13 @@
 }
 
 .card__new-price {
-    font-size: 32px;
+    font-size: 62px;
     line-height: 37px;
-    font-weight: bold;
     display: flex;
     align-items: center;
-    justify-content: center;
+    text-align: right;
     letter-spacing: -0.03em;
+    justify-content: center;
     color: #1D1D1B;
     margin: 13px 0 0 0;
 }
@@ -291,10 +291,13 @@
 .card__renewal {
     font-size: 16px;
     line-height: 20px;
-    text-align: center;
+    flex: none;
+
+    margin: 0px 4px;
     color: #444444;
     margin: 0;
-    width: 94px;
+    text-align: center;
+
 }
 
 .card_upper {
