--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,9 +1,10 @@
 .cards {
     display: flex;
-    width: 100%;
+    width: 1164px;
     border: 1px solid red;
-    margin: -100px auto;
+    margin: -150px auto;
     justify-content: space-between;
+    z-index: 170;
 }
 
 @media screen and (max-width: 720px) {
