--- a/blocks/lead/__paragraph/lead__paragraph.css
+++ b/blocks/lead/__paragraph/lead__paragraph.css
@@ -1,10 +1,9 @@
 .lead__paragraph {
-
     font-size: 21px;
     line-height: 28px;
-    white-space: pre-wrap;
-    margin: 7px 0 44px;
     color: #444444;
+    margin-bottom: 44px;
+    white-space: pre-line;
 }
 
 @media screen and (max-width: 720px) {
