--- a/blocks/wrappers/flex__wrapper.css
+++ b/blocks/wrappers/flex__wrapper.css
@@ -1,5 +1,5 @@
 .flex__wrapper {
     display: flex;
-    margin: 0 auto;
-    justify-content: center;
+    position: relative;
+    z-index: 100;
 }
