--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,7 +4,6 @@
 @import url(__title/lead__title.css);
 
 @import url(__link/lead__link.css);
-@import url(__img/lead__img.css);
 
 
 
@@ -25,8 +24,15 @@
 .lead__relative {
     position: relative;
     z-index: 150;
+
 }
 
+@media screen and (max-width: 768px) {
+    .lead__relative {
+        width: 399px;
+        z-index: 100;
+    }
+}
 
 .lead__medium-wrapper {
     display: none;
@@ -41,14 +47,14 @@
     white-space: pre-line;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
     .lead__paragraph {
         display: none;
     }
 }
 
-@media screen and (max-width: 720px) {
-    .lead__paragraph-med {
+@media screen and (max-width: 768px) {
+    .lead__paragraph_med {
         display: flex;
         flex-direction: column;
         font-size: 24px;
@@ -59,21 +65,60 @@
 }
 
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
     .lead__medium-wrapper {
         display: flex;
         flex-direction: column;
-        width: 720px;
+        width: 768px;
         margin: 0 auto;
 
     }
 }
 
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
     .lead {
         width: 100%;
         margin: 0 20px;
     }
 }
 
+
+@media screen and (max-width: 768px) {
+    .lead {
+        width: 100%;
+        margin: 0 20px;
+    }
+}
+
+.lead__img {
+    display: flex;
+    margin-top: -67px;
+    position: absolute;
+    right: 0px;
+    z-index: 200;
+    width: 740px;
+}
+
+
+.lead__img_medium {
+    position: absolute;
+    right: 0;
+    display: none;
+}
+
+
+@media screen and (max-width: 768px) {
+    .lead__img {
+        display: none;
+        z-index: 20;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead__img_medium {
+        display: flex;
+        margin-top: -45px;
+
+    }
+}
