--- a/blocks/faq/faq.css
+++ b/blocks/faq/faq.css
@@ -121,3 +121,10 @@
     grid-template-areas:
     ".";
 }
+
+.faq__polygon {
+    position: absolute;
+    left: 0;
+    top: 2220px;
+    z-index: 10;
+}
