--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,6 @@
 
 .footer {
-    max-width: 1920px;
+    max-width: 100%;
     min-width: 186px;
     display: flex;
     flex-direction: row;
@@ -10,6 +10,14 @@
     padding: 0 408px 0;
 }
 
+@media screen and (max-width: 768px) {
+    .footer {
+        justify-content: space-between;
+        margin: 0;
+        padding: 0;
+        height: fit-content;
+    }
+}
 
 .footer__nav {
     display: flex;
@@ -33,8 +41,7 @@
 
 @media screen and (max-width: 768px) {
     .footer__content {
-        margin: 0;
-        width: 428px;
+        margin: 25px 0 24px 24px;
     }
 }
 
@@ -63,9 +70,7 @@
     color: #999999;
     margin-top: 10px;
     white-space: pre-line;
-}:first-child {
-    margin: 0;
- }
+}
 
 @media screen and (max-width: 768px) {
     .footer__text {
@@ -81,7 +86,7 @@
 
 @media screen and (max-width: 768px) {
     .footer__options {
-        margin-left: 110px;
+        margin: 27px 24px 75px 0;
     }
 }
 
@@ -107,6 +112,8 @@
     padding: 0 12px 0;
 }
 
+
+
 .footer__country-name {
     font-size: 16px;
     line-height: 20px;
@@ -125,12 +132,7 @@
 }
 
 
-@media screen and (max-width: 768px) {
-    .footer {
-        width: 100%;
-        padding: 24px;
-    }
-}
+
 
 @media screen and (max-width: 320px) {
     .footer {
