--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,7 +6,7 @@
 @import url(__button/header__button.css);
 
 .header{
-    width: 1920px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px #F2F2F2;
