--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,3 @@
-@import url(__logo/header__logo.css);
-@import url(__lang/header__lang.css);
-@import url(__lang-item/header__lang-item.css);
-@import url(__lang-item/_active/header__lang-item_active.css);
-@import url(__wrapper/header__wrapper.css);
 @import url(__button/header__button.css);
 
 .header{
@@ -13,17 +8,12 @@
     box-shadow: 0px 1px 4px rgba(102, 102, 102, 0.12);
 }
 
-@media screen and (max-width: 1184px) {
-    .header {
-     margin: 28px 48px 48px;
-     width: 928px;
-    }
-}
 
 @media screen and (max-width: 768px) {
     .header {
-     margin: 28px auto 48px;
-     width: 100%;
+
+    padding: 0 41px 0 25px;
+     width: 702px;
     }
 }
 
@@ -34,5 +24,74 @@
     }
 }
 
+.header__wrapper {
+    display: flex;
+    align-items: center;
+    margin-right: 396px;
+}
+
+@media screen and (max-width: 768px) {
+    .header__wrapper {
+        width: 142px;
+        height: 42px;
+        margin-right: 0;
+    }
+}
 
 
+
+.header__logo {
+    margin-left: 405px;
+}
+
+@media screen and (max-width: 768px) {
+    .header__logo {
+        width: 142px;
+        height: 42px;
+        margin-left: 25px;
+    }
+}
+
+.header__lang-item {
+    font-size: 14px;
+    line-height: 18px;
+    color: #444444;
+    text-decoration: none;
+}
+
+.header__lang-item:hover {
+    opacity: 0.3;
+}
+
+
+.header__lang {
+    display: flex;
+
+    color: black;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    list-style: none;
+}
+
+.header__lang:last-of-type {
+    margin-right: 0;
+}
+
+@media screen and (max-width: 640px) {
+    .header__lang {
+        font-size: 18px;
+        line-height: 24px;
+    }
+}
+
+.header__button {
+    width: 12px;
+    height: 12px;
+    background-image: url('../../images/black.svg');
+    background-color: #FFFFFF;
+    border: none;
+    margin-left: 8px;
+    margin-top: 7px;
+}
